Bug. Removed zoom when focusing on mobile devices on iPhone.

--- a/src/features/Contact/ui/FormContact/FormContact.scss
+++ b/src/features/Contact/ui/FormContact/FormContact.scss
@@ -19,12 +19,17 @@
 
   &__block {
     position: relative;
+    width: 100%;
+  }
+
+  &__fields {
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
     width: 100%;
     color: inherit;
+    transition: all 0.8s;
   }
 
   &__thanks {
@@ -39,12 +44,7 @@
     left: 0;
     font-size: calc(18px + 8 * $size);
     font-weight: 300;
-    transition: all 0.8s;
-
-    &._hide {
-      z-index: -1;
-      opacity: 0;
-    }
+    transition: all 0.6s;
 
     ._dark & {
       color: $white;
@@ -55,6 +55,12 @@
       color: $black;
       background-color: $white;
     }
+  }
+
+  ._hide {
+    z-index: -1;
+    opacity: 0;
+    pointer-events: none;
   }
 }
 
