--- a/src/pages/Contact/ui/Contact.scss
+++ b/src/pages/Contact/ui/Contact.scss
@@ -2,3 +2,9 @@
   width: 100%;
   display: flex;
 }
+
+@media #{$mobile500} {
+  .contact {
+    padding-top: 110px;
+  }
+}
