--- a/src/shared/ui/MainInput/MainInput.scss
+++ b/src/shared/ui/MainInput/MainInput.scss
@@ -4,7 +4,7 @@
   color: inherit;
   background: transparent;
   border: 1px solid $black-200;
-  font-size: calc(12px + 2 * $size);
+  font-size: 16px;
   font-weight: 300;
   letter-spacing: 1.5px;
 
