--- a/src/shared/ui/TextArea/TextArea.scss
+++ b/src/shared/ui/TextArea/TextArea.scss
@@ -3,7 +3,7 @@
   padding: 10px 12px;
   border: 1px solid $black-200;
   background: transparent;
-  font-size: calc(12px + 2 * $size);
+  font-size: 16px;
   font-weight: 300;
   resize: none;
 
